// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeroEarnCard snapshot > hero card matches snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-fhj6gi"
  >
    <div
      class="MuiStack-root css-imab1l-MuiStack-root"
    >
      <div
        class="badge-container MuiBox-root css-1wzsofa"
      >
        <svg
          fill="none"
          height="12"
          viewBox="0 0 20 20"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clip-path="url(#a)"
          >
            <path
              d="M18.016 14.167c.573 0 1.057.166 1.45.5.393.333.587.722.58 1.166l-8.03 2.5-7-1.666v-7.5h1.95l7.27 2.241c.52.173.78.484.78.934 0 .26-.113.489-.34.683-.227.194-.513.297-.86.308h-2.8l-1.75-.558-.33.783 2.08.609h7Zm-4-11.475c.707-.684 1.607-1.025 2.7-1.025.907 0 1.673.277 2.3.833.627.556.96 1.194 1 1.917 0 .572-.333 1.255-1 2.05-.667.794-1.323 1.458-1.97 1.991-.647.534-1.657 1.325-3.03 2.375a116.845 116.845 0 0 1-3.06-2.375c-.653-.533-1.31-1.197-1.97-1.991-.66-.795-.983-1.478-.97-2.05 0-.756.323-1.395.97-1.917s1.427-.8 2.34-.833c1.067 0 1.963.341 2.69 1.025ZM-1 9.167h4.016v9.166H-1V9.167Z"
              fill="currentColor"
              fill-opacity="0.92"
            />
          </g>
          <defs>
            <clippath
              id="a"
            >
              <path
                d="M0 0h20v20H0z"
                fill="#fff"
              />
            </clippath>
          </defs>
        </svg>
      </div>
      <div
        class="badge-container MuiBox-root css-1wzsofa"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
        >
          Staking
        </p>
      </div>
      <div
        class="badge-container MuiBox-root css-1wzsofa"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
        >
          Earn
        </p>
      </div>
    </div>
    <p
      class="MuiBox-root css-1m04jmt"
    />
    <div
      class="MuiStack-root css-185w891-MuiStack-root"
    >
      <div
        class="MuiStack-root css-69zndg-MuiStack-root"
      >
        <div
          class="MuiBox-root css-h1oaii"
        >
          <div
            class="MuiBox-root css-wioyy2"
          >
            <div
              class="MuiStack-root css-k0vgmj-MuiStack-root"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular css-1vh1zud-MuiAvatar-root"
              >
                <img
                  alt="morpho"
                  class="MuiAvatar-img css-i4dfdj-MuiAvatar-img"
                  src="https://strapi.jumper.exchange/uploads/morpho_eef0686ee3_2e4b8e06a6.png"
                />
              </div>
            </div>
            <div
              class="MuiBox-root css-k8f1u5"
            >
              <div
                class="MuiStack-root css-1x5pyaa-MuiStack-root"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1ksgy38-MuiAvatar-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-ddjmgs-MuiSkeleton-root"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root css-16zy09x"
          >
            <span
              class="MuiTypography-root MuiTypography-titleXSmall css-10j8ruw-MuiTypography-root"
            >
              metamorpho
            </span>
            <p
              class="MuiTypography-root MuiTypography-bodyXSmall css-1gwx9ao-MuiTypography-root"
            >
              Base
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeroEarnCard snapshot > hero card with link matches snapshot 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-fvpjsp-MuiTypography-root-MuiLink-root"
    href="/earn/moonwell-flagship-usdc-on-base"
  >
    <div
      class="MuiBox-root css-6n5j87"
    >
      <div
        class="MuiStack-root css-imab1l-MuiStack-root"
      >
        <div
          class="badge-container MuiBox-root css-1wzsofa"
        >
          <svg
            fill="none"
            height="12"
            viewBox="0 0 20 20"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#a)"
            >
              <path
                d="M18.016 14.167c.573 0 1.057.166 1.45.5.393.333.587.722.58 1.166l-8.03 2.5-7-1.666v-7.5h1.95l7.27 2.241c.52.173.78.484.78.934 0 .26-.113.489-.34.683-.227.194-.513.297-.86.308h-2.8l-1.75-.558-.33.783 2.08.609h7Zm-4-11.475c.707-.684 1.607-1.025 2.7-1.025.907 0 1.673.277 2.3.833.627.556.96 1.194 1 1.917 0 .572-.333 1.255-1 2.05-.667.794-1.323 1.458-1.97 1.991-.647.534-1.657 1.325-3.03 2.375a116.845 116.845 0 0 1-3.06-2.375c-.653-.533-1.31-1.197-1.97-1.991-.66-.795-.983-1.478-.97-2.05 0-.756.323-1.395.97-1.917s1.427-.8 2.34-.833c1.067 0 1.963.341 2.69 1.025ZM-1 9.167h4.016v9.166H-1V9.167Z"
                fill="currentColor"
                fill-opacity="0.92"
              />
            </g>
            <defs>
              <clippath
                id="a"
              >
                <path
                  d="M0 0h20v20H0z"
                  fill="#fff"
                />
              </clippath>
            </defs>
          </svg>
        </div>
        <div
          class="badge-container MuiBox-root css-1wzsofa"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            Staking
          </p>
        </div>
        <div
          class="badge-container MuiBox-root css-1wzsofa"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            Earn
          </p>
        </div>
      </div>
      <p
        class="MuiBox-root css-1m04jmt"
      />
      <div
        class="MuiStack-root css-185w891-MuiStack-root"
      >
        <div
          class="MuiStack-root css-69zndg-MuiStack-root"
        >
          <div
            class="MuiBox-root css-h1oaii"
          >
            <div
              class="MuiBox-root css-wioyy2"
            >
              <div
                class="MuiStack-root css-k0vgmj-MuiStack-root"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular css-1vh1zud-MuiAvatar-root"
                >
                  <img
                    alt="morpho"
                    class="MuiAvatar-img css-i4dfdj-MuiAvatar-img"
                    src="https://strapi.jumper.exchange/uploads/morpho_eef0686ee3_2e4b8e06a6.png"
                  />
                </div>
              </div>
              <div
                class="MuiBox-root css-k8f1u5"
              >
                <div
                  class="MuiStack-root css-1x5pyaa-MuiStack-root"
                >
                  <div
                    class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1ksgy38-MuiAvatar-root"
                  >
                    <span
                      class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-ddjmgs-MuiSkeleton-root"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root css-16zy09x"
            >
              <span
                class="MuiTypography-root MuiTypography-titleXSmall css-10j8ruw-MuiTypography-root"
              >
                metamorpho
              </span>
              <p
                class="MuiTypography-root MuiTypography-bodyXSmall css-1gwx9ao-MuiTypography-root"
              >
                Base
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`HeroEarnCard snapshot > hero card with loading matches snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-1uahi8c"
  >
    <div
      class="MuiStack-root css-imab1l-MuiStack-root"
    >
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-tew9o2-MuiSkeleton-root"
        color="default"
        style="width: 84px;"
      />
    </div>
    <div
      class="MuiBox-root css-1e1l0gs"
    >
      <span
        class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-414zdl-MuiSkeleton-root"
      />
    </div>
    <div
      class="MuiStack-root css-185w891-MuiStack-root"
    >
      <div
        class="MuiStack-root css-69zndg-MuiStack-root"
      >
        <div
          class="MuiBox-root css-cmx6on"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-2rnxpj-MuiSkeleton-root"
          />
        </div>
        <span
          class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-2zon0b-MuiSkeleton-root"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`HeroEarnCard snapshot > hero card with single asset matches snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-fhj6gi"
  >
    <div
      class="MuiStack-root css-imab1l-MuiStack-root"
    >
      <div
        class="badge-container MuiBox-root css-1wzsofa"
      >
        <svg
          fill="none"
          height="12"
          viewBox="0 0 20 20"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clip-path="url(#a)"
          >
            <path
              d="M18.016 14.167c.573 0 1.057.166 1.45.5.393.333.587.722.58 1.166l-8.03 2.5-7-1.666v-7.5h1.95l7.27 2.241c.52.173.78.484.78.934 0 .26-.113.489-.34.683-.227.194-.513.297-.86.308h-2.8l-1.75-.558-.33.783 2.08.609h7Zm-4-11.475c.707-.684 1.607-1.025 2.7-1.025.907 0 1.673.277 2.3.833.627.556.96 1.194 1 1.917 0 .572-.333 1.255-1 2.05-.667.794-1.323 1.458-1.97 1.991-.647.534-1.657 1.325-3.03 2.375a116.845 116.845 0 0 1-3.06-2.375c-.653-.533-1.31-1.197-1.97-1.991-.66-.795-.983-1.478-.97-2.05 0-.756.323-1.395.97-1.917s1.427-.8 2.34-.833c1.067 0 1.963.341 2.69 1.025ZM-1 9.167h4.016v9.166H-1V9.167Z"
              fill="currentColor"
              fill-opacity="0.92"
            />
          </g>
          <defs>
            <clippath
              id="a"
            >
              <path
                d="M0 0h20v20H0z"
                fill="#fff"
              />
            </clippath>
          </defs>
        </svg>
      </div>
      <div
        class="badge-container MuiBox-root css-1wzsofa"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
        >
          Staking
        </p>
      </div>
      <div
        class="badge-container MuiBox-root css-1wzsofa"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
        >
          Earn
        </p>
      </div>
    </div>
    <p
      class="MuiBox-root css-1m04jmt"
    />
    <div
      class="MuiStack-root css-185w891-MuiStack-root"
    >
      <div
        class="MuiStack-root css-69zndg-MuiStack-root"
      >
        <div
          class="MuiBox-root css-h1oaii"
        >
          <div
            class="MuiBox-root css-wioyy2"
          >
            <div
              class="MuiStack-root css-k0vgmj-MuiStack-root"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular css-1vh1zud-MuiAvatar-root"
              >
                <img
                  alt="morpho"
                  class="MuiAvatar-img css-i4dfdj-MuiAvatar-img"
                  src="https://strapi.jumper.exchange/uploads/morpho_eef0686ee3_2e4b8e06a6.png"
                />
              </div>
            </div>
            <div
              class="MuiBox-root css-k8f1u5"
            >
              <div
                class="MuiStack-root css-1x5pyaa-MuiStack-root"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1ksgy38-MuiAvatar-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-ddjmgs-MuiSkeleton-root"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root css-16zy09x"
          >
            <span
              class="MuiTypography-root MuiTypography-titleXSmall css-10j8ruw-MuiTypography-root"
            >
              metamorpho
            </span>
            <p
              class="MuiTypography-root MuiTypography-bodyXSmall css-1gwx9ao-MuiTypography-root"
            >
              Base
            </p>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary css-181aqyq-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <div
            class="MuiBox-root css-wxfvax"
          >
            <div
              class="MuiBox-root css-11hplq4"
            >
              <svg
                fill="none"
                height="28"
                viewBox="0 0 28 28"
                width="28"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.535 1.766a1.167 1.167 0 0 1 1.338 1.458l-.007.021-2.24 7.024a.624.624 0 0 1-.009.026.584.584 0 0 0 .548.788h8.168a1.751 1.751 0 0 1 1.742 1.956 1.75 1.75 0 0 1-.413.935l-11.55 11.9h-.001a1.165 1.165 0 0 1-1.984-1.097l.007-.023 2.24-7.024a.584.584 0 0 0-.268-.748.584.584 0 0 0-.27-.065h-8.17a1.751 1.751 0 0 1-1.362-2.853l.034-.039 11.55-11.9c.171-.187.398-.313.647-.359Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
